<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral40"
    tools:context=".admin1">


    <Button
        android:id="@+id/btnenter"
        android:layout_width="290dp"
        android:layout_height="102dp"
        android:backgroundTint="#FFFF4444"
        android:fontFamily="sans-serif-black"
        android:text="@string/getcrud"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToSearch"
        app:layout_constraintVertical_bias="0.309" />

    <Button
        android:id="@+id/btnToSearch"
        android:layout_width="287dp"
        android:layout_height="108dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#FF0099CC"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/butt2"
        android:text="@string/getSearchU"
        android:textColor="@color/material_dynamic_tertiary20"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="405dp"
        android:layout_height="351dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/b_pg"
        tools:layout_editor_absoluteY="-2dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="46dp"
        android:layout_marginTop="72dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintEnd_toStartOf="@+id/btnToSearch"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="52dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintEnd_toStartOf="@+id/btnenter"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="cursive"
        android:text="@string/text2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>